--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # NFC packages
   nfc_manager: ^3.5.0
-  provider: any
+
+  # State management
+  provider: ^6.1.1
+
+  # Utilities
+  uuid: ^4.2.1
+  intl: ^0.19.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
